# amozon_etl

./: config.py  load_data_in_db.ipynb  main.py  pyproject.toml
etl/: extract.py  load.py  transform.py
notebook/: extract_from_dataset.ipynb  transform_reviews_meta.ipynb
utils/: safe_parse.py
